# messages

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci-foxy.yml  ci-humble.yml  ci-jazzy.yml  colcon-build.yml
msg/: CommandInput.msg  CommandOutput.msg  DesiredState.msg  GraphDrift.msg  GraphEvent.msg  GraphSnapshot.msg  LocalMode.msg  MutoAction.msg  MutoActionMeta.msg  MutoActionStamped.msg  NativeMode.msg  NodeState.msg  PlanManifest.msg  PluginResponse.msg  PluginResponseStamped.msg  RepoMode.msg  StackManifest.msg  Thing.msg  ThingHeaders.msg
srv/: CommandPlugin.srv  ComposePlugin.srv  GetGraphState.srv  ProvisionPlugin.srv  ReconcileNow.srv
